[gd_scene load_steps=5 format=3 uid="uid://cgtjcdiqpybvs"]

[ext_resource type="SpriteFrames" uid="uid://cwxct1npps8nj" path="res://skeleton_enemy.tres" id="1_27622"]
[ext_resource type="Script" path="res://skeleton.gd" id="1_b2pgm"]
[ext_resource type="AudioStream" uid="uid://d4kanwkdalyfy" path="res://assets/sounds/skeleton_walk.mp3" id="3_127rw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_k8qnj"]
size = Vector3(1.53638, 2.11109, 1)

[node name="skeleton" type="CharacterBody3D"]
script = ExtResource("1_b2pgm")

[node name="skeleton_character" type="AnimatedSprite3D" parent="."]
sprite_frames = ExtResource("1_27622")
animation = &"attack_left"
frame = 2
frame_progress = 0.0832269

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00987244, 0)
shape = SubResource("BoxShape3D_k8qnj")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00305176, 0.126217, 0)
shape = SubResource("BoxShape3D_k8qnj")

[node name="Walk_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_127rw")
volume_db = 10.159

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
